--- a/2.Fundamentos-CSS/1.CSS-Sintaxe-Basico/style.css
+++ b/2.Fundamentos-CSS/1.CSS-Sintaxe-Basico/style.css
@@ -1,3 +1,9 @@
+html{
+    height: 100vh;
+    background-image: url('./tech-background.jpg');
+    background-size: cover;
+}
+
 h2{
     color: green;
 }
