--- a/Extra-Cursos_Projetos/Projetos/2.Projeto-Pagina-Receitas/style.css
+++ b/Extra-Cursos_Projetos/Projetos/2.Projeto-Pagina-Receitas/style.css
@@ -1,10 +1,11 @@
-*{
+html{
     margin: 0;
     padding: 0;
     font-size: 10px;
+    font-family: 'Lato', Arial, Helvetica, sans-serif;
 }
 
-#topo{
+#barra-topo{
     background: #FF6b28;
     padding: 1.5rem;
     text-align: center;
@@ -15,4 +16,24 @@
     background-size: cover;
     background-position: center;
     height: 40rem;
+}
+
+.conteudo{
+    font-size: 2rem;
+    margin: 7rem auto;
+    padding: 0 4rem;
+    max-width: 99rem;
+}
+
+h1,h2,h3,h4,h5,h6{
+    color: #FF6b28;
+}
+
+h1{
+    font-size: 4.8rem;
+}
+
+h2{
+    font-size: 2.8rem;
+    margin-bottom: 4rem;
 }
