--- a/Extra-Cursos_Projetos/Projetos/2.Projeto-Pagina-Receitas/style.css
+++ b/Extra-Cursos_Projetos/Projetos/2.Projeto-Pagina-Receitas/style.css
@@ -37,3 +37,40 @@ h2{
     font-size: 2.8rem;
     margin-bottom: 4rem;
 }
+
+.cartao{
+    padding: 7rem 10rem;
+    margin-top: 5rem;
+    border-radius: 2rem;
+}
+
+.cartao:hover{
+    box-shadow: 8px 8px 15px 12px rgba(205,205,205, 0.25);
+}
+
+.ingredientes{
+    cursor: url(./images/cursor_ingredientes.png), default;
+}
+
+.preparo{
+    cursor: url(./images/cursor_preparo.png), default;
+}
+
+a{
+    text-decoration: none;
+}
+
+.botao-comprar{
+    background-color: #FF6b28;
+    padding: 1.6rem;
+    border-radius: 20px;
+    color: white;
+}
+
+li{
+    margin-bottom: 1.4rem;
+}
+
+.lista-ingredientes{
+    margin-bottom: 5rem;
+}
