--- a/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/style.css
+++ b/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/style.css
@@ -1,5 +1,18 @@
+html{
+    font-size: 10px;
+}
+
 body{
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+}
+
+.top-bar{
+    background-color: #333;
+    color: white;
+    font-size: 2.4rem;
+    font-weight: 700;
+    text-align: center;
+    padding: 0.8rem;
 }
