--- a/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/style.css
+++ b/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/style.css
@@ -46,9 +46,14 @@ h1, h2{
 }
 
 .social-icons{
-
+    margin-top: 1rem;
 }
 
 .social-icon{
+    width: 2rem;
+    padding: 1rem 1rem 1rem 0;
+}
 
+a{
+    text-decoration: none;
 }
