--- a/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/style.css
+++ b/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/style.css
@@ -56,6 +56,8 @@ h1, h2{
 
 a{
     text-decoration: none;
+    color: #fd8a24;
+    font-weight: 700;
 }
 
 .content{
@@ -66,4 +68,9 @@ a{
 p{    
     font-size: 1.8rem;
     line-height: 3rem;
+}
+
+.cta{
+    font-size: 1.8rem;
+    margin: 3rem 0;
 }
