--- a/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/style.css
+++ b/Extra-Cursos_Projetos/Projetos/1.Projeto-Pagina-Conteudo/style.css
@@ -74,3 +74,13 @@ p{
     font-size: 1.8rem;
     margin: 3rem 0;
 }
+
+figure{
+    padding: 0;
+    margin: 4rem 0;
+    font-size: 1.2rem;
+}
+
+figure>img{
+    width: 100%;
+}
